syntax = "proto3";

package dictionary;

service DictionaryService {
    rpc GetDictionary(getDictionaryRequest) returns (getDictionaryResponse) {}
}

message getDictionaryRequest {

}

message getUsersResponse {
    repeated User users = 1;
}

message Word {
    int32 id = 1;
    string userId = 2;
}

message Dictionary {
    int32 id = 1;
    string userId = 2;
}